--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to braxonsstuff.com!">
-    <meta name="theme-color" content="#ffffff"/>
-    <!--add meta data here, such as naame, description. be sure to test using discord link embeds-->
-    <title>Home</title>
-    <link rel="icon" href="https://file.garden/ZTBRM8DJt13euhmD/BKIcon.png">
-    <link rel="stylesheet" href="/css/mainGlobal.css">
-    <script src="/js/mainGlobal.js" defer></script>
+<title>hello!</title>
 </head>
 <body>
     <div class="main">
