Enhance index.html with favicon and updated text
Updated the description text and added a favicon link.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>hello!</title>
+    <title>hello!</title>
+    <link rel="icon" href="https://file.garden/ZTBRM8DJt13euhmD/EXCLAMITIAN%20-%20Remaster%20256x256.png">
 </head>
 <body>
     <div class="main">
         <div id="header">
             <header>THIS IS A WORK IN PROGRESS!!!</header>
             <div id="description">
-                <p>Hello! This is a page that has not been made yet. Stay tuned!</p>
+                <p>Hello! This is a page that has not been made yet, it is coming soon!. Stay tuned!</p>
                 <a href="https://braxonsstuff.com/">Head over to my main website</a>
             </div>
         </div>
